spacing fixes

--- a/src/styles.css
+++ b/src/styles.css
@@ -25,10 +25,11 @@ html {
 .explanation {
   padding: 1%;
   height: auto;
+  font-weight: bold;
 }
 
 .menu{
-  height: 15%;
+  height: 20%;
 }
 
 .grids{
